--- a/src/AlignCommentsExtension.Tests/AlignCommentsExtension.Tests.csproj
+++ b/src/AlignCommentsExtension.Tests/AlignCommentsExtension.Tests.csproj
@@ -23,4 +23,13 @@
     <ProjectReference Include="..\AlignCommentsExtension\AlignCommentsExtension.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="TestFiles\SimpleAlignment.expected">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="TestFiles\SimpleAlignment.test">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
